# pq-transport-gateway

./: Cargo.toml  README.md  example-config.toml  grep
docs/: QUICK_START.md  VISUAL_GUIDE.md  pqtg_whitepaper.aux  pqtg_whitepaper.blg  pqtg_whitepaper.out  pqtg_whitepaper.tex  pqtg_whitepaper_revised.aux  pqtg_whitepaper_revised.out  pqtg_whitepaper_revised.tex
docs/diagrams/: before_after.dot  current_vulnerability.dot  deployment_architecture.dot  generate_pngs.sh  pqtg_solution.dot  protocol_flow.dot
src/: audit.rs  auth.rs  config.rs  crypto.rs  lib.rs  main.rs  proxy.rs  qkd_client.rs
