[package]
name = "pq-transport-gateway"
version = "1.0.0"
edition = "2021"
authors = ["QuantumVerse Protocols <security@quantumverse.protocols>"]
description = "Post-Quantum secure proxy for QKD infrastructure, addressing vendor TLS vulnerabilities"
license = "MIT OR Apache-2.0"
keywords = ["quantum", "cryptography", "post-quantum", "qkd", "proxy"]
categories = ["cryptography", "network-programming"]
repository = "https://github.com/QuantumVerseProtocols/pq-transport-gateway"

[workspace]
# Standalone workspace to avoid parent conflicts

[lib]
name = "pq_qkd_proxy"
path = "src/lib.rs"

[dependencies]
# Post-quantum cryptography - using compatible versions
pqcrypto-falcon = "0.2"
pqcrypto-sphincsplus = "0.5"
pqcrypto-traits = "0.3"

# Symmetric cryptography (NIST approved)
aes-gcm = "0.10"
sha3 = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Networking  
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Utilities
rand = "0.8"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
zeroize = { version = "1.7", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling  
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "pq-qkd-proxy"
path = "src/main.rs"